--- a/swa-cli.config.json
+++ b/swa-cli.config.json
@@ -4,7 +4,7 @@
     "app": {
       "context": "http://localhost:4200",
       "run": "npm start",
-      "apiLocation": "",
+      "apiLocation": "api",
       "outputLocation": "dist/angular-basic",
       "devserverTimeout": 10000,
       "open": "true"
